Atualizei o site-url

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
   cookie-consent:
     express: true
   reader-mode: true
-  site-url: "https://blog.lucascarmo.com.br"
+  site-url: "https://lucascarmo.com.br"
   title: "lucas carmo"
   navbar:
     left:
